--- a/Analysis/10Prozent/Q2_59_0/output/par.tex
+++ b/Analysis/10Prozent/Q2_59_0/output/par.tex
@@ -17,22 +17,22 @@
       \toprule
  Parameter   & output  \\ 
       \midrule
-  'Bg' & $0.10 \pm 0.46$  \\ 
-  'Cg' & $-0.74 \pm 0.30$  \\ 
-  'Aprig' & $0.36 \pm 0.27$  \\ 
-  'Bprig' & $-0.85 \pm 0.12$  \\ 
-  'Cprig' & $18 \pm 568$  \\ 
-  'Dprig' & $26 \pm 14$  \\ 
-  'AUbar' & $0.12 \pm 0.93$  \\ 
-  'BDbar' & $0.3 \pm 1.6$  \\ 
-  'CDbar' & $12 \pm 43$  \\ 
+  'Bg' & $116.8 \pm 1.4$  \\ 
+  'Cg' & $39.7 \pm 1.4$  \\ 
+  'Aprig' & $2.5 \pm 1.4$  \\ 
+  'Bprig' & $-0.26 \pm 0.30$  \\ 
+  'Cprig' & $87.8 \pm 1.4$  \\ 
+  'Dprig' & $48.7 \pm 1.4$  \\ 
+  'AUbar' & $0.88 \pm 0.58$  \\ 
+  'BDbar' & $1.0 \pm 1.2$  \\ 
+  'CDbar' & $147.7 \pm 1.4$  \\ 
   'alphas' & $\textcolor{blue}{ 0.1180 }$  \\ 
   'fs' & $\textcolor{blue}{ 0.4000 }$  \\ 
       \midrule
   \rowcolor{white}
- Fit status   & \textcolor{red}{ not-a-fit }  \\ 
+ Fit status   & \textcolor{red}{ failed }  \\ 
   \rowcolor{white}
- Uncertainties   & not-a-fit  \\ 
+ Uncertainties   & migrad-hesse  \\ 
       \bottomrule
     \end{tabular}
   }
